classDiagram
    class Apprenant {
        +id: int
        +nom: string
        +email: string
        +password: string
    }

    class Autoformation {
        +id: int
        +titre: string
        +description : string
        +start_date: date
        +end_date: date
    }

    class Tuto {
        +id: int
        +titre: string
        +contenu: string
        +order:int
        +progression: string
    }

    class Formation {
        +id: int
        +titre: string
        +description: string

    }

    class Realisation {
        +id: int
        +date: Date
        +status: string
        +commentaire: string
    }


    %% Relationships
    Apprenant "1" -- "*" Autoformation : suit
    Formation "1" -- "*" Tuto : contient
    Formation "1" -- "*" Autoformation : contient
    Autoformation "1" -- "*" Realisation : suit
    Tuto "1" -- "1" Realisation : estLiéeÀ